add docker support

--- a/NN.POS.API/appsettings.Production.json
+++ b/NN.POS.API/appsettings.Production.json
@@ -21,5 +21,12 @@
       "Name": "NN.POS.System.API",
       "IsEnable": true
     }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8090"
+      }
+    }
   }
 }
