--- a/NN.POS.API/NN.POS.API.csproj
+++ b/NN.POS.API/NN.POS.API.csproj
@@ -8,6 +8,9 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>D:\Projects\NN.POS\NN.POS.API\NN.POS.Api.xml</DocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <UserSecretsId>c0b3c731-a5e8-46b9-992b-5662dd1b09b7</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -34,6 +37,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NLog" Version="5.5.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.5.0" />
@@ -45,6 +49,10 @@
   <ItemGroup>
     <ProjectReference Include="..\NN.POS.Common\NN.POS.Common.csproj" />
     <ProjectReference Include="..\NN.POS.Model\NN.POS.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
   </ItemGroup>
 
 </Project>
